--- a/opssat-package/pom.xml
+++ b/opssat-package/pom.xml
@@ -194,6 +194,11 @@
       <artifactId>malspp-encoding-opssat</artifactId>
       <version>1.0.1-FC</version>
     </dependency>
+    <dependency>
+      <groupId>int.esa.nmf.mission.opssat.nanomind</groupId>
+      <artifactId>parameters-provisioning</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
