feat: dynamic creation of aggregation when getValue(parameter) is called 	- parameters dynamically assigned to agg. definitions 		- parameters count limited in each agg. definition         	- no cleaning of agg. defintion yet         - getValue() of aggregration service is used to fetch parameters values         	- memory cache for each parameter value

--- a/nanomind-connector/parameters-provisioning/pom.xml
+++ b/nanomind-connector/parameters-provisioning/pom.xml
@@ -71,7 +71,10 @@
       <groupId>int.esa.nmf.core</groupId>
       <artifactId>helper-tools</artifactId>
     </dependency>
-    <!-- Need by the smart parameter provider to implement the OBSW parameter values provider interface -->
+    <dependency>
+      <groupId>int.esa.nmf.mission.opssat.nanomind</groupId>
+      <artifactId>consumers</artifactId>
+    </dependency>
     <dependency>
       <groupId>int.esa.nmf.core</groupId>
       <artifactId>nanosat-mo-supervisor</artifactId>
