--- a/opssat-package/src/main/resources/space-app-root/consumer.properties
+++ b/opssat-package/src/main/resources/space-app-root/consumer.properties
@@ -3,53 +3,7 @@
 helpertools.configurations.MOappName=SpaceApp
 #------------------------------------------------------------------------------------------------------
 
-# Network Configuration tags (shall be used to form the network field)
-helpertools.configurations.OrganizationName=esa
-helpertools.configurations.MissionName=OPS-SAT
-helpertools.configurations.NetworkZone=space
-helpertools.configurations.DeviceName=SEPP
-#------------------------------------------------------------------------------------------------------
 
-# set the name of the MAL classes to use
-org.ccsds.moims.mo.mal.factory.class=esa.mo.mal.impl.MALContextFactoryImpl
-
-# Provider URI file location
-providerURI.properties=providerURIs.properties
-
-# MAL HTTP protocol properties
-org.ccsds.moims.mo.mal.transport.protocol.malhttp=esa.mo.mal.transport.http.HTTPTransportFactoryImpl
-org.ccsds.moims.mo.mal.transport.http.numconnections=10
-org.ccsds.moims.mo.mal.transport.http.inputprocessors=10
-#org.ccsds.moims.mo.mal.transport.http.port=xxxxx
-#org.ccsds.moims.mo.mal.transport.http.host=localhost
-#org.ccsds.moims.mo.mal.encoding.protocol.malhttp=esa.mo.mal.encoder.string.StringStreamFactory
-org.ccsds.moims.mo.mal.encoding.protocol.malhttp=esa.mo.mal.encoder.binary.BinaryStreamFactory
-#org.ccsds.moims.mo.mal.transport.http.serverimpl=esa.mo.mal.transport.http.api.impl.jetty.JettyServer
-#org.ccsds.moims.mo.mal.transport.http.clientimpl=esa.mo.mal.transport.http.api.impl.jetty.JettyClient
-#org.ccsds.moims.mo.mal.transport.http.bindingmode=NoResponse
-org.ccsds.moims.mo.mal.transport.http.bindingmode=NoEncoding
-#org.ccsds.moims.mo.mal.transport.http.bindingmode=RequestResponse
-
-# SPP protocol
-org.ccsds.moims.mo.mal.transport.protocol.malspp=de.dlr.gsoc.mo.malspp.transport.SPPTransportFactory
-org.ccsds.moims.mo.mal.encoding.protocol.malspp=de.dlr.gsoc.mo.malspp.encoding.SPPElementStreamFactory
-#org.ccsds.moims.mo.mal.transport.protocol.malspp=esa.mo.mal.transport.spp.SPPTransportFactoryImpl
-#org.ccsds.moims.mo.mal.encoding.protocol.malspp=esa.mo.mal.encoder.spp.SPPFixedBinaryStreamFactory
-
-#org.ccsds.moims.mo.malspp.test.spp.factory.class=org.ccsds.moims.mo.testbed.util.sppimpl.cfp.CFPSPPSocketFactory
-org.ccsds.moims.mo.malspp.test.spp.factory.class=org.ccsds.moims.mo.testbed.util.sppimpl.tcp.TCPSPPSocketFactory
-
-# TCP/IP protocol properties
-org.ccsds.moims.mo.mal.transport.protocol.maltcp=esa.mo.mal.transport.tcpip.TCPIPTransportFactoryImpl
-org.ccsds.moims.mo.mal.encoding.protocol.maltcp=esa.mo.mal.encoder.binary.BinaryStreamFactory
-#org.ccsds.moims.mo.mal.encoding.protocol.maltcp=esa.mo.mal.encoder.tcpip.TCPIPSplitBinaryStreamFactory
-org.ccsds.moims.mo.mal.transport.tcpip.autohost=true
-
-# RMI protocol properties
-org.ccsds.moims.mo.mal.transport.protocol.rmi=esa.mo.mal.transport.rmi.RMITransportFactoryImpl
-#org.ccsds.moims.mo.mal.encoding.protocol.rmi=esa.mo.mal.encoder.string.StringStreamFactory
-#org.ccsds.moims.mo.mal.encoding.protocol.rmi=esa.mo.mal.encoder.xml.XMLStreamFactory
-org.ccsds.moims.mo.mal.encoding.protocol.rmi=esa.mo.mal.encoder.binary.BinaryStreamFactory
-
-org.ccsds.moims.mo.mal.transport.gen.debug=true
-org.ccsds.moims.mo.mal.transport.gen.wrap=false
+# All transport and settings properties are already set by the provider.properties file of your NMF app
+# and it's associated transport.properties and settings.properties files. If your NMF app appears to only
+# be a consumer, then provide all the missing properties here.
